minor fixes on alignment checkboxes + form background

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ form{
 	padding: 50px;
 	display: flex;
 	flex-direction: column;
-	background: transparent;
+	background: rgba(4, 8, 29, 0.6);
 	border-radius: 5px;
 	max-width: 50%;
     box-shadow: 1px 1px 4px rgb(0, 0, 57, 0.8);
@@ -148,6 +148,7 @@ input[type='checkbox']{
 	border: solid 1px;
 	width: 15px;
 	height: 15px;
+	margin-left: 10px;
 	margin-right: 10px;
 }
 
